--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.6",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "faker": "^5.5.3",
