--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "faker": "^5.5.3",
     "pg": "^8.7.1",
     "redux-logger": "^3.0.6",
-    "sequelize": "^6.12.1"
+    "sequelize": "^6.12.1",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -35,8 +37,6 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "redux-thunk": "^2.4.1"
   }
 }
